        application.  Not only can this capability be replicated outside of
        Object itself, other tools exist (e.g., Valgrind) that are much more
        comprehensive in this area. Removing the code associated with all this
        greatly simplifies Object, its associated macros and instance creation.
        It also reduces the barrier to understanding what the code is doing.

   ObjMetadata
     -- new class that replaces _Static class once defined in Object
     -- added getClassname() to this newly defined class.  It effectively replaces
        getClassName() in Object, which was never used.

   Component class
     -- component-based data logger functionality has been removed.  Removal of
        rippled into simulation library with the deletion of SimLogger and
        TabLogger classes.

   SlotTable class
     -- removed useless methods such as copyData, deleteData -- probably remnant
        from long ago, when it might have been an Object-based class.

--------------------------------------------------------------------------------
dafif library


--------------------------------------------------------------------------------
dis library

--------------------------------------------------------------------------------
glut library

--------------------------------------------------------------------------------
graphics library


--------------------------------------------------------------------------------
hla library


--------------------------------------------------------------------------------
instruments library


--------------------------------------------------------------------------------
iodevice library


--------------------------------------------------------------------------------
linearsystem library


--------------------------------------------------------------------------------
models library


--------------------------------------------------------------------------------
otw library
